...
      <Tab.Screen
        name="Agreements"
        component={YieldAgreementsList}
        options={{
          title: 'Agreements',
          tabBarTestID: 'agreements_tab',
          tabBarAccessibilityLabel: 'Agreements Tab',
        }}
      />
      <Tab.Screen
        name="Marketplace"
        component={Marketplace}
        options={{
...
